tests/rosetta/transpiler/Kotlin/2048.error
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:154:46: error: type mismatch: inferred type is Any but Int? was expected
            (b[y] as MutableList<Int>)[x] = ((new as MutableList<Any>)[x]!!)
                                             ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:169:16: error: type mismatch: inferred type is Any? but MutableList<Int>? was expected
        rev = (r["row"]!!)
               ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:177:46: error: type mismatch: inferred type is Any but Int? was expected
            (b[y] as MutableList<Int>)[x] = ((rev as MutableList<Any>)[x]!!)
                                             ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:217:46: error: type mismatch: inferred type is Any but Int? was expected
            (b[y] as MutableList<Int>)[x] = ((new as MutableList<Any>)[y]!!)
                                             ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:232:16: error: type mismatch: inferred type is Any? but MutableList<Int>? was expected
        col = (r["row"]!!)
               ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:240:46: error: type mismatch: inferred type is Any but Int? was expected
            (b[y] as MutableList<Int>)[x] = ((col as MutableList<Any>)[y]!!)
                                             ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:285:14: error: type mismatch: inferred type is Any? but MutableList<MutableList<Int>>? was expected
    board = (r["board"]!!)
             ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:287:14: error: type mismatch: inferred type is Any? but MutableList<MutableList<Int>>? was expected
    board = (r["board"]!!)
             ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:296:22: error: type mismatch: inferred type is Any? but MutableList<MutableList<Int>>? was expected
            board = ((m as MutableMap<String, Any>)["board"]!!)
                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:297:22: error: type mismatch: inferred type is Any? but Int? was expected
            score = ((m as MutableMap<String, Any>)["score"]!!)
                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:298:22: error: type mismatch: inferred type is Any? but Boolean? was expected
            moved = ((m as MutableMap<String, Any>)["moved"]!!)
                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:302:22: error: type mismatch: inferred type is Any? but MutableList<MutableList<Int>>? was expected
            board = ((m as MutableMap<String, Any>)["board"]!!)
                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:303:22: error: type mismatch: inferred type is Any? but Int? was expected
            score = ((m as MutableMap<String, Any>)["score"]!!)
                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:304:22: error: type mismatch: inferred type is Any? but Boolean? was expected
            moved = ((m as MutableMap<String, Any>)["moved"]!!)
                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:308:22: error: type mismatch: inferred type is Any? but MutableList<MutableList<Int>>? was expected
            board = ((m as MutableMap<String, Any>)["board"]!!)
                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:309:22: error: type mismatch: inferred type is Any? but Int? was expected
            score = ((m as MutableMap<String, Any>)["score"]!!)
                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:310:22: error: type mismatch: inferred type is Any? but Boolean? was expected
            moved = ((m as MutableMap<String, Any>)["moved"]!!)
                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:314:22: error: type mismatch: inferred type is Any? but MutableList<MutableList<Int>>? was expected
            board = ((m as MutableMap<String, Any>)["board"]!!)
                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:315:22: error: type mismatch: inferred type is Any? but Int? was expected
            score = ((m as MutableMap<String, Any>)["score"]!!)
                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:316:22: error: type mismatch: inferred type is Any? but Boolean? was expected
            moved = ((m as MutableMap<String, Any>)["moved"]!!)
                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:323:22: error: type mismatch: inferred type is Any? but MutableList<MutableList<Int>>? was expected
            board = ((r2 as MutableMap<String, Any>)["board"]!!)
                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/2048.kt:325:17: error: type mismatch: inferred type is Any but Boolean was expected
            if (full && !(hasMoves(board) as Boolean)) {
                ^
